# AI-Driven-FastApi-Template

./: .env.example  CONTRIBUTING.md  Dockerfile.example  Makefile  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  update_enhancement.md
.github/chatmodes/: code-review.chatmode.md  code-review.md  debugging.chatmode.md  feature-development.md
.github/prompts/: api-endpoint.prompt.md  refactoring.md  test-writing.prompt.md
.github/workflows/: ci.yml  issue-pr-linker.yml  pr-automation.yml
src/: run.py
src/app/: main.py
src/app/api/routes/: example.py  health.py
src/app/core/: config.py
src/app/models/: __init__.py
src/app/schemas/: __init__.py
tests/: conftest.py  test_example.py  test_health.py
